samples/_failures_safe/1761508004_ef2e17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4115fee.c: In function ‘main’:
./samples/SAFE/__tmp_c4115fee.c:182:5: error: expected declaration or statement at end of input
  182 |     }
      |     ^
